TAG: qcreports_db-3-5-1-9
TAG: qcreports_db-3-5-1-8
DATE: 10/04/2006
STAFF: lec
CHANGES:
1) TR 7865/MRK_GOUnknown.sql
2) convert to MRK_Homology_Cache

TAG: qcreports_db-3-5-1-7
DATE: 10/02/2006
STAFF: lec
CHANGES:
1) TR 7935/updated ALL_MolNotesNoMP.py

TAG: qcreports_db-3-5-1-6
DATE: 09/28/2006
STAFF: lec
CHANGES:
1) TR 7925/updated GXD_Images.py

TAG: qcreports_db-3-5-1-5
TAG: qcreports_db-3-5-1-4
DATE: 09/22/2006
STAFF: lec
CHANGES:
1) TR 7901/ALL_MolNotesNoMP
2) TR 7335/PIRSF_Stats.sql

TAG: qcreports_db-3-5-1-3
DATE: 09/07/2006
STAFF: lec
CHANGES:
1) updated msp/loadQC_* RADAR_DBSCHEMA to RADAR_DBSCHEMADIR

TAG: qcreports_db-3-5-1-2
DATE: 09/07/2006
STAFF: lec
CHANGES:
1) TR 7887; GXD_FullCodeable.py

TAG: qcreports_db-3-5-1-1
DATE: 09/06/2006
STAFF: lec
CHANGES:
1) build 36; merge

TAG: qcreports_db-3-5-0-18
DATE: 08/30/2006
STAFF: lec
CHANGES:
1) TR 7879/ALL_GeneTrap.py

TAG: qcreports_db-3-5-0-17
DATE: 08/25/2006
STAFF: lec
CHANGES:
1) build 36

TAG: qcreports_db-build36-3
DATE: 08/29/2006
STAFF: lec
CHANGES:
1) build 36

TAG: qcreports_db-build36-2
DATE: 07/17/2006
STAFF: lec
CHANGES:
1) build 36

TAG: qcreports_db-build36-1
DATE: 07/12/2006
STAFF: lec
CHANGES:
1) build 36

TAG: qcreports_db-build36-BP
DATE: 07/12/2006
STAFF: lec
CHANGES:
1) build 36

TAG: qcreports_db-3-5-0-16
TAG: qcreports_db-3-5-0-15
DATE: 07/01/2006
STAFF: lec
CHANGES:
1) mgiconfig merge

TAG: qcreports_db-3-5-0-14
DATE: 06/27/2006
STAFF: lec
CHANGES:
1) MGI 3.5
2) TR 7737/MRK_GOIEA.py

TAG: qcreports_db-3-5-0-13
DATE: 06/26/2006
STAFF: lec
CHANGES:
1) MGI 3.5
2) TR 7776/GXD_Stats.py

TAG: qcreports_db-3-5-0-12
DATE: 06/20/2006
STAFF: lec
CHANGES:
1) MGI 3.5
2) TR 7767/GXD_FullCodeMissingIndex.sql

TAG: qcreports_db-mgiconfig-5
DATE: 06/28/2006
STAFF: lec
CHANGES:
1) mgiconfig

TAG: qcreports_db-mgiconfig-4
DATE: 06/26/2006
STAFF: lec
CHANGES:
1) mgiconfig

TAG: qcreports_db-mgiconfig-3
DATE: 06/14/2006
STAFF: lec
CHANGES:
1) mgiconfig

TAG: qcreports_db-mgiconfig-2