@@ -129,7 +129,6 @@ def processJournal(jList, fileName, journalTitle):
 	fp.write(CRT)
     fp.write('\n(%d rows affected)\n' % (len(results)))
 
-    reportlib.trailer(fp)
     reportlib.finish_nonps(fp)
 
 #
