@@ -225,7 +225,6 @@ fp2 = reportlib.init('GXD_FullCodeable2.py', 'Papers containing genes that are n
 process()
 report1(fp1)
 report2(fp2)
-reportlib.trailer(fp1)
 reportlib.finish_nonps(fp1)
 reportlib.trailer(fp2)
 reportlib.finish_nonps(fp2)
