@@ -129,6 +129,5 @@ for r in results:
 	 	 string.joinfields(alleles[key], ',') + CRT)
 
 fp.write('\n(%d rows affected)\n' % (len(results)))
-reportlib.trailer(fp)
 reportlib.finish_nonps(fp)	# non-postscript file
 
