@@ -83,6 +83,5 @@ for r in results:
     fp.write(reportlib.CRT)
 
 fp.write('\n(%d rows affected)\n' % (len(results)))
-reportlib.trailer(fp)
 reportlib.finish_nonps(fp)
 
