@@ -101,6 +101,5 @@ for r in results:
 
 fp.write('\n(%d rows affected)\n' % (len(results)))
 
-reportlib.trailer(fp)
 reportlib.finish_nonps(fp)
 
