@@ -1,3 +1,9 @@
+TAG: qcreports_db-3-5-1-10
+DATE: 10/05/2006
+STAFF: lec
+CHANGES:
+1) TR7943; remove trailer
+
 TAG: qcreports_db-3-5-1-9
 TAG: qcreports_db-3-5-1-8
 DATE: 10/04/2006
